PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Approval_Process_Step__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Approval_Matrix__c</fullName>
        <label>Approval Matrix</label>
        <referenceTo>Phoenix_Approval_Matrix__c</referenceTo>
        <relationshipLabel>Approval Process Steps</relationshipLabel>
        <relationshipName>Phoenix_Approval_Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Team__c</fullName>
        <label>Approver Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phoenix_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Criteria_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Criteria Step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Notification_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Notification Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Process Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>